--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "pnpm run build && amplify push && amplify publish -y"
+    "deploy": "amplify publish -y"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.540.0",
